# Coursework_1_1

./: .coverage  .env  .env.template  .gitignore  README.md  pyproject.toml  report.html
reports/: report_spending_by_category_20250727_095351.json  report_spending_by_category_20250727_160258.json  report_spending_by_category_20250727_214504.json  report_spending_by_weekday_20250727_150546.json  report_spending_by_weekday_20250727_165221.json  report_spending_by_weekday_20250727_210003.json  report_spending_by_weekday_20250727_210511.json  report_spending_by_weekday_20250727_211343.json  report_test_func_20250727_205156.json  workday_spending_report.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
