[project]
name = "course-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Роман Мстиславский",email = "mstislavskijr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "private-package (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "course_project_1", from = "src"}]


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.16.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest-cov = "^6.2.1"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv|.venv'

[tool.black]
line-length = 119
exclude = """ \\.git """

[tool.isort]
line_length = 119